Atualizacao do projeto 06/01/2018

--- a/servicos/servico-divisorias.html
+++ b/servicos/servico-divisorias.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<link rel="shortcut icon" href="../img/ico/hp_icon.jpg">
+	<link rel="shortcut icon" href="../img/ico/hp-logo-icon.jpg">
 	<link rel="stylesheet" type="text/css" href="../bootstrap/css/bootstrap.min.css">
 	<link href="../font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
@@ -43,7 +43,7 @@
 					<ul class="nav navbar-nav navbar-right ml-auto">
 						<!-- Navegação feita através da js hp-nav.js -->
 						<li class="nav-item link-servicos"><a class="nav-link js-scroll-trigger" href="#">SERVIÇOS</a></li>
-						<li class="nav-item link-televendas"><a class="nav-link js-scroll-trigger" href="#">TELEVENDAS</a></li>
+						<!--<li class="nav-item"><a class="nav-link js-scroll-trigger" href="#televendas">TELEVENDAS</a></li>-->
 						<li class="nav-item link-sobre-nos"><a class="nav-link js-scroll-trigger" href="#">SOBRE NÓS</a></li>
 						<li class="nav-item link-unidades"><a class="nav-link js-scroll-trigger" href="#">UNIDADES</a></li>
 						<li class="nav-item link-contato"><a class="nav-link js-scroll-trigger" href="#">CONTATO</a></li>
