--- a/servicos/servico-pvc.html
+++ b/servicos/servico-pvc.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<link rel="shortcut icon" href="../img/ico/hp_icon.jpg">
+	<link rel="shortcut icon" href="../img/ico/hp-logo-icon.jpg">
 	<link rel="stylesheet" type="text/css" href="../bootstrap/css/bootstrap.min.css">
 	<link href="../font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
@@ -43,7 +43,7 @@
 					<ul class="nav navbar-nav navbar-right ml-auto">
 						<!-- Navegação feita através da js hp-nav.js -->
 						<li class="nav-item link-servicos"><a class="nav-link js-scroll-trigger" href="#">SERVIÇOS</a></li>
-						<li class="nav-item link-televendas"><a class="nav-link js-scroll-trigger" href="#">TELEVENDAS</a></li>
+						<!--<li class="nav-item"><a class="nav-link js-scroll-trigger" href="#televendas">TELEVENDAS</a></li>-->
 						<li class="nav-item link-sobre-nos"><a class="nav-link js-scroll-trigger" href="#">SOBRE NÓS</a></li>
 						<li class="nav-item link-unidades"><a class="nav-link js-scroll-trigger" href="#">UNIDADES</a></li>
 						<li class="nav-item link-contato"><a class="nav-link js-scroll-trigger" href="#">CONTATO</a></li>
@@ -220,8 +220,8 @@
 							</li>
 
 							<li>
-								<a href="../img/galeria-rebaixamento-pvc/pvc-002.jpg" data-rel="colorbox">
-									<img width="150" height="150" alt="150x150" src="../img/galeria-rebaixamento-pvc/pvc-002.jpg" />
+								<a href="../img/galeria-rebaixamento-pvc/pvc_002.jpg" data-rel="colorbox">
+									<img width="150" height="150" alt="150x150" src="../img/galeria-rebaixamento-pvc/pvc_002.jpg" />
 									<div class="text">
 										<div class="inner">Clique para ampliar a foto</div>
 									</div>
