Atualizacao do projeto 06/01/2018 - 3

--- a/servicos/servico-drywall.html
+++ b/servicos/servico-drywall.html
@@ -296,8 +296,8 @@
 							</li>
 
 							<li>
-								<a href="../img/galeria-drywall/24-PAREDE.jpg" data-rel="colorbox">
-									<img width="150" height="150" alt="150x150" src="../img/galeria-drywall/24-PAREDE.jpg" />
+								<a href="../img/galeria-drywall/24-PAREDE.png" data-rel="colorbox">
+									<img width="150" height="150" alt="150x150" src="../img/galeria-drywall/24-PAREDE.png" />
 									<div class="text">
 										<div class="inner">Clique para ampliar a foto</div>
 									</div>
