Atualizacao do projeto 20/01/2018

--- a/servicos/servico-pvc.html
+++ b/servicos/servico-pvc.html
@@ -326,6 +326,78 @@
 									</div>
 								</a>
 							</li>
+
+							<li>
+								<a href="../img/galeria-rebaixamento-pvc/28-PVC.jpg" data-rel="colorbox">
+									<img width="150" height="150" alt="150x150" src="../img/galeria-rebaixamento-pvc/28-PVC.jpg" />
+									<div class="text">
+										<div class="inner">Clique para ampliar a foto</div>
+									</div>
+								</a>
+							</li>
+
+							<li>
+								<a href="../img/galeria-rebaixamento-pvc/29-PVC.jpg" data-rel="colorbox">
+									<img width="150" height="150" alt="150x150" src="../img/galeria-rebaixamento-pvc/29-PVC.jpg" />
+									<div class="text">
+										<div class="inner">Clique para ampliar a foto</div>
+									</div>
+								</a>
+							</li>
+
+							<li>
+								<a href="../img/galeria-rebaixamento-pvc/30-PVC.jpg" data-rel="colorbox">
+									<img width="150" height="150" alt="150x150" src="../img/galeria-rebaixamento-pvc/30-PVC.jpg" />
+									<div class="text">
+										<div class="inner">Clique para ampliar a foto</div>
+									</div>
+								</a>
+							</li>
+
+							<li>
+								<a href="../img/galeria-rebaixamento-pvc/31-PVC.jpg" data-rel="colorbox">
+									<img width="150" height="150" alt="150x150" src="../img/galeria-rebaixamento-pvc/31-PVC.jpg" />
+									<div class="text">
+										<div class="inner">Clique para ampliar a foto</div>
+									</div>
+								</a>
+							</li>
+
+							<li>
+								<a href="../img/galeria-rebaixamento-pvc/32-PVC.jpg" data-rel="colorbox">
+									<img width="150" height="150" alt="150x150" src="../img/galeria-rebaixamento-pvc/32-PVC.jpg" />
+									<div class="text">
+										<div class="inner">Clique para ampliar a foto</div>
+									</div>
+								</a>
+							</li>
+
+							<li>
+								<a href="../img/galeria-rebaixamento-pvc/33-PVC.jpg" data-rel="colorbox">
+									<img width="150" height="150" alt="150x150" src="../img/galeria-rebaixamento-pvc/33-PVC.jpg" />
+									<div class="text">
+										<div class="inner">Clique para ampliar a foto</div>
+									</div>
+								</a>
+							</li>
+
+							<li>
+								<a href="../img/galeria-rebaixamento-pvc/34-PVC.jpg" data-rel="colorbox">
+									<img width="150" height="150" alt="150x150" src="../img/galeria-rebaixamento-pvc/34-PVC.jpg" />
+									<div class="text">
+										<div class="inner">Clique para ampliar a foto</div>
+									</div>
+								</a>
+							</li>
+
+							<li>
+								<a href="../img/galeria-rebaixamento-pvc/35-PVC.jpg" data-rel="colorbox">
+									<img width="150" height="150" alt="150x150" src="../img/galeria-rebaixamento-pvc/35-PVC.jpg" />
+									<div class="text">
+										<div class="inner">Clique para ampliar a foto</div>
+									</div>
+								</a>
+							</li>
 						</ul>
 					</div><!-- PAGE CONTENT ENDS -->
 				</div><!-- /.col -->
