Atualizacao do projeto 05/02/2018

--- a/servicos/servico-gesso-decorado.html
+++ b/servicos/servico-gesso-decorado.html
@@ -183,6 +183,105 @@
 								</a>
 							</li>
 
+							<li>
+								<a href="../img/galeria-gesso-decorado/13-DRYWALLDEC.jpg" data-rel="colorbox">
+									<img width="150" height="150" alt="150x150" src="../img/galeria-gesso-decorado/13-DRYWALLDEC.jpg" />
+									<div class="text">
+										<div class="inner">Clique para ampliar a foto</div>
+									</div>
+								</a>
+							</li>
+
+							<li>
+								<a href="../img/galeria-gesso-decorado/14-DRYWALLDEC.jpg" data-rel="colorbox">
+									<img width="150" height="150" alt="150x150" src="../img/galeria-gesso-decorado/14-DRYWALLDEC.jpg" />
+									<div class="text">
+										<div class="inner">Clique para ampliar a foto</div>
+									</div>
+								</a>
+							</li>
+
+							<li>
+								<a href="../img/galeria-gesso-decorado/15-DRYWALLDEC.jpg" data-rel="colorbox">
+									<img width="150" height="150" alt="150x150" src="../img/galeria-gesso-decorado/15-DRYWALLDEC.jpg" />
+									<div class="text">
+										<div class="inner">Clique para ampliar a foto</div>
+									</div>
+								</a>
+							</li>
+
+							<li>
+								<a href="../img/galeria-gesso-decorado/16-DRYWALLDEC.jpg" data-rel="colorbox">
+									<img width="150" height="150" alt="150x150" src="../img/galeria-gesso-decorado/16-DRYWALLDEC.jpg" />
+									<div class="text">
+										<div class="inner">Clique para ampliar a foto</div>
+									</div>
+								</a>
+							</li>
+
+							<li>
+								<a href="../img/galeria-gesso-decorado/17-DRYWALLDEC.jpg" data-rel="colorbox">
+									<img width="150" height="150" alt="150x150" src="../img/galeria-gesso-decorado/17-DRYWALLDEC.jpg" />
+									<div class="text">
+										<div class="inner">Clique para ampliar a foto</div>
+									</div>
+								</a>
+							</li>
+
+							<li>
+								<a href="../img/galeria-gesso-decorado/18-DRYWALLDEC.jpg" data-rel="colorbox">
+									<img width="150" height="150" alt="150x150" src="../img/galeria-gesso-decorado/18-DRYWALLDEC.jpg" />
+									<div class="text">
+										<div class="inner">Clique para ampliar a foto</div>
+									</div>
+								</a>
+							</li>
+
+							<li>
+								<a href="../img/galeria-gesso-decorado/19-DRYWALLDEC.jpg" data-rel="colorbox">
+									<img width="150" height="150" alt="150x150" src="../img/galeria-gesso-decorado/19-DRYWALLDEC.jpg" />
+									<div class="text">
+										<div class="inner">Clique para ampliar a foto</div>
+									</div>
+								</a>
+							</li>
+
+							<li>
+								<a href="../img/galeria-gesso-decorado/20-DRYWALLDEC.jpg" data-rel="colorbox">
+									<img width="150" height="150" alt="150x150" src="../img/galeria-gesso-decorado/20-DRYWALLDEC.jpg" />
+									<div class="text">
+										<div class="inner">Clique para ampliar a foto</div>
+									</div>
+								</a>
+							</li>
+
+							<li>
+								<a href="../img/galeria-gesso-decorado/21-DRYWALLDEC.jpg" data-rel="colorbox">
+									<img width="150" height="150" alt="150x150" src="../img/galeria-gesso-decorado/21-DRYWALLDEC.jpg" />
+									<div class="text">
+										<div class="inner">Clique para ampliar a foto</div>
+									</div>
+								</a>
+							</li>
+
+							<li>
+								<a href="../img/galeria-gesso-decorado/22-DRYWALLDEC.jpg" data-rel="colorbox">
+									<img width="150" height="150" alt="150x150" src="../img/galeria-gesso-decorado/22-DRYWALLDEC.jpg" />
+									<div class="text">
+										<div class="inner">Clique para ampliar a foto</div>
+									</div>
+								</a>
+							</li>
+
+							<li>
+								<a href="../img/galeria-gesso-decorado/23-DRYWALLDEC.jpg" data-rel="colorbox">
+									<img width="150" height="150" alt="150x150" src="../img/galeria-gesso-decorado/23-DRYWALLDEC.jpg" />
+									<div class="text">
+										<div class="inner">Clique para ampliar a foto</div>
+									</div>
+								</a>
+							</li>
+
 						</ul>
 					</div><!-- PAGE CONTENT ENDS -->
 				</div><!-- /.col -->
