--- a/servicos/servico-pvc.html
+++ b/servicos/servico-pvc.html
@@ -398,6 +398,96 @@
 									</div>
 								</a>
 							</li>
+
+							<li>
+								<a href="../img/galeria-rebaixamento-pvc/36-PVC.jpg" data-rel="colorbox">
+									<img width="150" height="150" alt="150x150" src="../img/galeria-rebaixamento-pvc/36-PVC.jpg" />
+									<div class="text">
+										<div class="inner">Clique para ampliar a foto</div>
+									</div>
+								</a>
+							</li>
+
+							<li>
+								<a href="../img/galeria-rebaixamento-pvc/37-PVC.jpg" data-rel="colorbox">
+									<img width="150" height="150" alt="150x150" src="../img/galeria-rebaixamento-pvc/37-PVC.jpg" />
+									<div class="text">
+										<div class="inner">Clique para ampliar a foto</div>
+									</div>
+								</a>
+							</li>
+
+							<li>
+								<a href="../img/galeria-rebaixamento-pvc/38-PVC.jpg" data-rel="colorbox">
+									<img width="150" height="150" alt="150x150" src="../img/galeria-rebaixamento-pvc/38-PVC.jpg" />
+									<div class="text">
+										<div class="inner">Clique para ampliar a foto</div>
+									</div>
+								</a>
+							</li>
+
+							<li>
+								<a href="../img/galeria-rebaixamento-pvc/39-PVC.jpg" data-rel="colorbox">
+									<img width="150" height="150" alt="150x150" src="../img/galeria-rebaixamento-pvc/39-PVC.jpg" />
+									<div class="text">
+										<div class="inner">Clique para ampliar a foto</div>
+									</div>
+								</a>
+							</li>
+
+							<li>
+								<a href="../img/galeria-rebaixamento-pvc/40-PVC.jpg" data-rel="colorbox">
+									<img width="150" height="150" alt="150x150" src="../img/galeria-rebaixamento-pvc/40-PVC.jpg" />
+									<div class="text">
+										<div class="inner">Clique para ampliar a foto</div>
+									</div>
+								</a>
+							</li>
+
+							<li>
+								<a href="../img/galeria-rebaixamento-pvc/41-PVC.jpg" data-rel="colorbox">
+									<img width="150" height="150" alt="150x150" src="../img/galeria-rebaixamento-pvc/41-PVC.jpg" />
+									<div class="text">
+										<div class="inner">Clique para ampliar a foto</div>
+									</div>
+								</a>
+							</li>
+
+							<li>
+								<a href="../img/galeria-rebaixamento-pvc/42-PVC.jpg" data-rel="colorbox">
+									<img width="150" height="150" alt="150x150" src="../img/galeria-rebaixamento-pvc/42-PVC.jpg" />
+									<div class="text">
+										<div class="inner">Clique para ampliar a foto</div>
+									</div>
+								</a>
+							</li>
+
+							<li>
+								<a href="../img/galeria-rebaixamento-pvc/43-PVC.jpg" data-rel="colorbox">
+									<img width="150" height="150" alt="150x150" src="../img/galeria-rebaixamento-pvc/43-PVC.jpg" />
+									<div class="text">
+										<div class="inner">Clique para ampliar a foto</div>
+									</div>
+								</a>
+							</li>
+
+							<li>
+								<a href="../img/galeria-rebaixamento-pvc/44-PVC.jpg" data-rel="colorbox">
+									<img width="150" height="150" alt="150x150" src="../img/galeria-rebaixamento-pvc/44-PVC.jpg" />
+									<div class="text">
+										<div class="inner">Clique para ampliar a foto</div>
+									</div>
+								</a>
+							</li>
+
+							<li>
+								<a href="../img/galeria-rebaixamento-pvc/45-PVC.jpg" data-rel="colorbox">
+									<img width="150" height="150" alt="150x150" src="../img/galeria-rebaixamento-pvc/45-PVC.jpg" />
+									<div class="text">
+										<div class="inner">Clique para ampliar a foto</div>
+									</div>
+								</a>
+							</li>
 						</ul>
 					</div><!-- PAGE CONTENT ENDS -->
 				</div><!-- /.col -->
